--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <title>Hello World</title>
 <link href="src/style/style.css" rel="stylesheet" media="all" type="text/css"> 
+<script src="src/js/script.js"></script>
 </head>
 <body>
 <h1>Hello World</h1>
 <div id="Centrage">
-	<button>Click</button>
+	<img src="src/img/matrix.gif" id="matrix"/>
+	<button id="button_matrix" onclick="affich_img()">Click</button>
 </div>
 </body>
 </html>
